fixed images on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,17 +8,13 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    height: 50vh;
     width: 100%;
     height: 100vh;
-    background-size: cover;
     background-image: url("../img/main.jpg");
     
   }
  .name-div{
     position: absolute;
-    top: 0;
-    left: 0;
     width: 100%;
     height: 100vh;
     display: flex;
@@ -49,8 +45,7 @@
   background: #2A85BC;
   color: #fff;
   margin: 10px;
-  margin-bottom: 10px !important;
-  padding-bottom: 10px !important;
+  
 }
 .bi-laptop,.bi-person{
   font-size: 3em;
